--- a/Guilloche_Designer.html
+++ b/Guilloche_Designer.html
@@ -368,7 +368,7 @@
             for (let i = 1; i < scaledXPoints.length; i++) {
                 svgContent += `L ${scaledXPoints[i].toFixed(2)} ${scaledYPoints[i].toFixed(2)} `;
             }
-            svgContent += `z" fill="none" stroke="black" stroke-width="0.2"/>\n`;
+            svgContent += `" fill="none" stroke="black" stroke-width="0.2"/>\n`;
 
             // Close SVG
             svgContent += `</svg>`;
