--- a/Guilloche_Designer.html
+++ b/Guilloche_Designer.html
@@ -15,9 +15,10 @@
 
     h1 {
         width: 100%;
-        text-align: center;
+        text-align: left;
         margin: 20px 0;
         font-size: 2em;
+        padding-left: 10%;
     }
 
     .container {
